@@ -212,6 +212,7 @@ namespace libtorrent
 			, default_peer_download_rate(0)
 			, broadcast_lsd(false)
 			, enable_outgoing_utp(true)
+			, max_pex_peers(200)
 		{}
 
 		// this is the user agent that will be sent to the tracker
@@ -814,6 +815,12 @@ namespace libtorrent
 
 		// when set to true, libtorrent will try to make outgoing utp connections
 		bool enable_outgoing_utp;
+
+		// the max number of peers we accept from pex messages from a single peer.
+		// this limits the number of concurrent peers any of our peers claims to
+		// be connected to. If they clain to be connected to more than this, we'll
+		// ignore any peer that exceeds this limit
+		int max_pex_peers;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
